--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -32,5 +32,5 @@ enable_testing()
 #add_subdirectory(TestArray)
 #add_subdirectory(TestList)
 #add_subdirectory(TestHeap)
-add_subdirectory(TestBinomialHeap)
-#add_subdirectory(TestFibHeap)
+#add_subdirectory(TestBinomialHeap)
+add_subdirectory(TestFibHeap)
