--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -29,8 +29,8 @@ enable_testing()
 
 # uncommet one of the following commands for running tests for structure with same name
 
-#add_subdirectory(TestArray)
+add_subdirectory(TestArray)
 #add_subdirectory(TestList)
 #add_subdirectory(TestHeap)
 #add_subdirectory(TestBinomialHeap)
-add_subdirectory(TestFibHeap)
+#add_subdirectory(TestFibHeap)
