Added some strange things (for GTest)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,20 @@ project(Lab1)
 
 set(CMAKE_CXX_STANDARD 11)
 
+if(MINGW)
+    set(GTEST_DISABLE_PTHREADS ON)
+endif()
+
+if(WIN32)
+    set(WINDOWS_CMAKE_ARGS
+            -DCMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG:PATH=DebugLibs
+            -DCMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE:PATH=ReleaseLibs
+            )
+else(WIN32)
+    set(WINDOWS_CMAKE_ARGS )
+endif(WIN32)
+
+
 include_directories(
         Array
         List
