Mass performance test added

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -31,7 +31,7 @@ enable_testing()
 
 #add_subdirectory(TestArray)
 #add_subdirectory(TestList)
-add_subdirectory(TestHeap)
+#add_subdirectory(TestHeap)
 #add_subdirectory(TestBinomialHeap)
 #add_subdirectory(TestFibHeap)
-#add_subdirectory(TestPerformance)
+add_subdirectory(TestPerformance)
